# skillforge-claude-plugin

./: .env.example  .gitignore  .lsp.json  .mcp.json  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HOOK_SECURITY_AUDIT.md  HOOK_SECURITY_CHECKLIST.txt  HOOK_SECURITY_FINDINGS.json  LICENSE  README.md  SECURITY_TEST_INDEX.md  SKILL.md  agents  commands  hooks  mem0-verification-report.md  mypy.ini  package.json  plugin-metadata.json  plugin.json  pyproject.toml  pyrightconfig.json  release-please-config.json  template-references.json  templates-inventory.json
.claude/: .instance_env  agent-registry.json  agent-registry.json.archived  keybindings.json  mem0-webhooks.json  plan.md  settings.json
.claude-plugin/: README.md  marketplace.json  plugin.json
agents/: accessibility-specialist.md  ai-safety-auditor.md  backend-system-architect.md  business-case-builder.md  ci-cd-engineer.md  code-quality-reviewer.md  data-pipeline-engineer.md  database-engineer.md  debug-investigator.md  deployment-manager.md  documentation-specialist.md  event-driven-architect.md  frontend-ui-developer.md  git-operations-engineer.md  infrastructure-architect.md  llm-integrator.md  market-intelligence.md  metrics-architect.md  monitoring-engineer.md  multimodal-specialist.md  performance-engineer.md  prioritization-analyst.md  product-strategist.md  prompt-engineer.md  rapid-ui-designer.md  release-engineer.md  requirements-translator.md  security-auditor.md  security-layer-auditor.md  system-design-reviewer.md  test-generator.md  ux-researcher.md  workflow-architect.md
commands/: add-golden.md  assess-complexity.md  brainstorming.md  claude-hud.md  commit.md  configure.md  create-pr.md  doctor.md  explore.md  feedback.md  fix-issue.md  git-recovery-command.md  implement.md  load-context.md  mem0-sync.md  recall.md  remember.md  review-pr.md  skill-evolution.md  verify.md
docs/: VERIFICATION_CONTEXT7_2026-01-28.md
(+3726 files in other folders)
