[project]
name = "orchestkit"
version = "5.2.4"
description = "OrchestKit Complete - AI-assisted development toolkit for Claude Code with 159 skills, 32 agents, and 144 hooks"
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Yonatan Gross"}
]
keywords = ["claude", "claude-code", "ai", "development", "skills", "agents"]

# Minimal dependencies for template validation
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
]
# Memory Fabric Agent SDK (for guaranteed MCP execution)
memory = [
    "anthropic>=0.40.0",
]
# Template dependencies (for validating skill templates)
templates = [
    "fastapi>=0.115.0",
    "pydantic>=2.10.0",
    "sqlalchemy>=2.0.0",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "redis>=5.0.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = [
    ".git",
    ".claude",
    "node_modules",
    "__pycache__",
    # Templates are educational examples - prioritize clarity over strict linting
    "skills/*/templates",
    "skills/*/examples",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PTH"]
ignore = [
    "E501",  # Line too long (templates may have long lines for clarity)
    "B008",  # Function call in default argument (FastAPI Depends pattern is intentional)
]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
include = [
    "skills/**/*.py",
    "bin/*.py",
    ".claude/scripts/*.py",
]
exclude = [
    "**/__pycache__",
    "**/node_modules",
]
reportMissingImports = "warning"
reportMissingTypeStubs = false

[tool.ty.environment]
python-version = "3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"
